#13-fix (client): scrollbar shifting page content

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,11 @@
     background-color: var(--white);
 }
 
+html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+}
+
 body,
 body * {
     margin: 0;
