--- a/client/src/pages/Home/home.module.css
+++ b/client/src/pages/Home/home.module.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     height: 60px;
+    padding-right: 35px;
 }
 
 .nav a {
